--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -392,19 +392,6 @@ var fullscreen = false;  //initial state
     </div>
 
     <hr>
-
-    <div class="form-group row">
-        <div class="col-sm-2">
-            {{ form_image_processing.IMAGE_STRETCH__MODE2_BLACK_CLIP.label(class='col-form-label') }}
-        </div>
-        <div class="col-sm-2">
-            {{ form_image_processing.IMAGE_STRETCH__MODE2_BLACK_CLIP(class='form-control bg-secondary') }}
-            <div id="IMAGE_STRETCH__MODE1_BLACK_CLIP-error" class="invalid-feedback text-danger" style="display: none;"></div>
-        </div>
-        <div class="col-sm-8">
-            <div>Default -2.8 - It is recommended not to adjust this setting</div>
-        </div>
-    </div>
     
     <div class="form-group row">
         <div class="col-sm-2">
@@ -412,7 +399,7 @@ var fullscreen = false;  //initial state
         </div>
         <div class="col-sm-2">
             {{ form_image_processing.IMAGE_STRETCH__MODE2_SHADOWS(class='form-control bg-secondary') }}
-            <div id="IMAGE_STRETCH__MODE1_SHADOWS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            <div id="IMAGE_STRETCH__MODE2_SHADOWS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Default 0.0 - With 0.03 this gives a nice subtle effect</div>
@@ -425,7 +412,7 @@ var fullscreen = false;  //initial state
         </div>
         <div class="col-sm-2">
             {{ form_image_processing.IMAGE_STRETCH__MODE2_MIDTONES(class='form-control bg-secondary') }}
-            <div id="IMAGE_STRETCH__MODE1_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            <div id="IMAGE_STRETCH__MODE2_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Values less than 0.5 enhances midtones, greater than 0.5 darkens midtones (0.5 results in the original image)</div>
@@ -439,7 +426,60 @@ var fullscreen = false;  //initial state
         </div>
         <div class="col-sm-2">
             {{ form_image_processing.IMAGE_STRETCH__MODE2_HIGHLIGHTS(class='form-control bg-secondary') }}
-            <div id="IMAGE_STRETCH__MODE1_HIGHLIGHTS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+            <div id="IMAGE_STRETCH__MODE2_HIGHLIGHTS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default 1.0 - It is recommended not to adjust this setting</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_BLACK_CLIP.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_BLACK_CLIP(class='form-control bg-secondary') }}
+            <div id="IMAGE_STRETCH__MODE3_BLACK_CLIP-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default -2.8 - It is recommended not to adjust this setting</div>
+        </div>
+    </div>
+    
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_SHADOWS.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_SHADOWS(class='form-control bg-secondary') }}
+            <div id="IMAGE_STRETCH__MODE3_SHADOWS-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Default 0.0 - With 0.03 this gives a nice subtle effect</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_MIDTONES.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_MIDTONES(class='form-control bg-secondary') }}
+            <div id="IMAGE_STRETCH__MODE3_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Values less than 0.5 enhances midtones, greater than 0.5 darkens midtones (0.5 results in the original image)</div>
+            <div>0.25 - 0.35 are good values to start</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_HIGHLIGHTS.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.IMAGE_STRETCH__MODE3_HIGHLIGHTS(class='form-control bg-secondary') }}
+            <div id="IMAGE_STRETCH__MODE3_HIGHLIGHTS-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
             <div>Default 1.0 - It is recommended not to adjust this setting</div>
@@ -1880,10 +1920,13 @@ const field_names = [
     'IMAGE_STRETCH__CLASSNAME',
     'IMAGE_STRETCH__MODE1_GAMMA',
     'IMAGE_STRETCH__MODE1_STDDEVS',
-    'IMAGE_STRETCH__MODE2_BLACK_CLIP',
     'IMAGE_STRETCH__MODE2_SHADOWS',
     'IMAGE_STRETCH__MODE2_MIDTONES',
     'IMAGE_STRETCH__MODE2_HIGHLIGHTS',
+    'IMAGE_STRETCH__MODE3_BLACK_CLIP',
+    'IMAGE_STRETCH__MODE3_SHADOWS',
+    'IMAGE_STRETCH__MODE3_MIDTONES',
+    'IMAGE_STRETCH__MODE3_HIGHLIGHTS',
     'CFA_PATTERN',
     'SCNR_ALGORITHM',
     'WBR_FACTOR',
