--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -141,8 +141,11 @@ async function loop() {
         if (redraw_planetarium || image_timestamp != last_image_timestamp) {
             var magnitude = Number($("#MAGNITUDE").val());
             var constellations = $("#CONSTELLATIONS").prop('checked');
+            var constellationlabels = $("#CONSTELLATIONLABELS").prop('checked');
             var showstars = $("#SHOWSTARS").prop('checked');
+            var showstarlabels = $("#SHOWSTARLABELS").prop('checked');
             var showplanets = $("#SHOWPLANETS").prop('checked');
+            var showplanetlabels = $("#SHOWPLANETLABELS").prop('checked');
 
             var azimuth_angle = Number($("#AZIMUTH_ANGLE").val());
             var latitude_offset = Number($("#LATITUDE_OFFSET").val());
@@ -213,10 +216,11 @@ async function loop() {
                 az: vs_az,
                 magnitude: magnitude,
                 constellations: constellations,
+                constellationlabels: constellationlabels,
                 showstars: showstars,
-                showstarlabels: true,
+                showstarlabels: showstarlabels,
                 showplanets: showplanets,
-                showplanetlabels: true,
+                showplanetlabels: showplanetlabels,
                 gridlines_eq: true,
                 mouse: false,
                 keyboard: false,
@@ -324,14 +328,23 @@ function loadJS(url, data, onDone, onError) {
 
         <div class="col-sm-1">
             {{ form_virtualsky.CONSTELLATIONS.label(class='col-form-label') }}
+            <div class="form-switch">
+                {{ form_virtualsky.CONSTELLATIONS(class='form-check-input') }}
+            </div>
         </div>
 
         <div class="col-sm-1">
             {{ form_virtualsky.SHOWSTARS.label(class='col-form-label') }}
+            <div class="form-switch">
+                {{ form_virtualsky.SHOWSTARS(class='form-check-input') }}
+            </div>
         </div>
 
         <div class="col-sm-1">
             {{ form_virtualsky.SHOWPLANETS.label(class='col-form-label') }}
+            <div class="form-switch">
+                {{ form_virtualsky.SHOWPLANETS(class='form-check-input') }}
+            </div>
         </div>
     </div>
 
@@ -365,21 +378,24 @@ function loadJS(url, data, onDone, onError) {
             {{ form_virtualsky.MAGNITUDE(class='form-control bg-secondary') }}
         </div>
 
-        <div class="col-sm-1">
+        <div class="col-sm-1" style="font-size:10px">
+            {{ form_virtualsky.CONSTELLATIONLABELS.label(class='col-form-label') }}
             <div class="form-switch">
-                {{ form_virtualsky.CONSTELLATIONS(class='form-check-input') }}
+                {{ form_virtualsky.CONSTELLATIONLABELS(class='form-check-input') }}
             </div>
         </div>
 
-        <div class="col-sm-1">
+        <div class="col-sm-1" style="font-size:10px">
+            {{ form_virtualsky.SHOWSTARLABELS.label(class='col-form-label') }}
             <div class="form-switch">
-                {{ form_virtualsky.SHOWSTARS(class='form-check-input') }}
+                {{ form_virtualsky.SHOWSTARLABELS(class='form-check-input') }}
             </div>
         </div>
 
-        <div class="col-sm-1">
+        <div class="col-sm-1" style="font-size:10px">
+            {{ form_virtualsky.SHOWPLANETLABELS.label(class='col-form-label') }}
             <div class="form-switch">
-                {{ form_virtualsky.SHOWPLANETS(class='form-check-input') }}
+                {{ form_virtualsky.SHOWPLANETLABELS(class='form-check-input') }}
             </div>
         </div>
     </div>
@@ -449,13 +465,26 @@ $("#CONSTELLATIONS").on("change", function() {
     forceRedrawPlanetarium();
 });
 
+$("#CONSTELLATIONLABELS").on("change", function() {
+    forceRedrawPlanetarium();
+});
+
 $("#SHOWSTARS").on("change", function() {
+    forceRedrawPlanetarium();
+});
+
+$("#SHOWSTARLABELS").on("change", function() {
     forceRedrawPlanetarium();
 });
 
 $("#SHOWPLANETS").on("change", function() {
     forceRedrawPlanetarium();
 });
+
+$("#SHOWPLANETLABELS").on("change", function() {
+    forceRedrawPlanetarium();
+});
+
 
 function setResizeHandler(callback, timeout) {
     var timer_id = undefined;
