--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4468,6 +4468,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
+            <div>Disabling planets will also disable planet labels</div>
         </div>
     </div>
 
