--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -221,13 +221,15 @@ async function loop() {
                 showstarlabels: showstarlabels,
                 showplanets: showplanets,
                 showplanetlabels: showplanetlabels,
+                showgalaxy: true,
                 gridlines_eq: true,
+                ecliptic: false,
+                meridian: false,
                 mouse: false,
                 keyboard: false,
                 showdate: false,
                 showposition: false,
                 gradient: false,
-                showgalaxy: true,
                 transparent: true,
                 cardinalpoints: true,
                 credit: false,
