--- a/indi_allsky/flask/templates/virtualsky.html
+++ b/indi_allsky/flask/templates/virtualsky.html
@@ -222,7 +222,10 @@ async function loop() {
                 showplanets: showplanets,
                 showplanetlabels: showplanetlabels,
                 showgalaxy: true,
+                gridstep: 30,
                 gridlines_eq: true,
+                gridlines_az: false,
+                gridlines_gal: false,
                 ecliptic: false,
                 meridian: false,
                 mouse: false,
