add privacy mode for VirtualSky

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4173,8 +4173,8 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div>
-                <div>Exclude private identifying information from EXIF tags including owner and GPS details</div>
-                <div>Camera information is still included.  Only valid for JPEG images</div>
+                <div>Exclude private identifying information from image EXIF tags including owner and GPS details</div>
+                <div>Reduces precision of Latitude and Longitude information when it is exposed</div>
             </div>
         </div>
     </div>
