hide owner info when privacy mode enabled

--- a/indi_allsky/flask/templates/cameraLens.html
+++ b/indi_allsky/flask/templates/cameraLens.html
@@ -84,7 +84,7 @@ var camera_id = {{ camera_id }};
 
     <div class="row">
         <div class="col-2">Owner</div>
-        <div class="col-4">{{ camera.owner}}</div>
+        <div class="col-4">{{ owner}}</div>
     </div>
 
     <div class="row">
