--- a/indi_allsky/flask/templates/imageprocessing.html
+++ b/indi_allsky/flask/templates/imageprocessing.html
@@ -467,6 +467,17 @@ var fullscreen = false;  //initial state
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_image_processing.SCNR_MTF_MIDTONES.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_image_processing.SCNR_MTF_MIDTONES(class='form-control bg-secondary') }}
+            <div id="SCNR_MTF_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Range 0.5-1.0.  0.5 = no change</div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_image_processing.WBR_FACTOR.label(class='col-form-label') }}
         </div>
         <div class="col-sm-2">
@@ -1872,6 +1883,7 @@ const field_names = [
     'IMAGE_STRETCH__MODE2_HIGHLIGHTS',
     'CFA_PATTERN',
     'SCNR_ALGORITHM',
+    'SCNR_MTF_MIDTONES',
     'WBR_FACTOR',
     'WBG_FACTOR',
     'WBB_FACTOR',
