--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1544,7 +1544,7 @@ var camera_id = {{ camera_id }};
             {{ form_config.SCNR_MTF_MIDTONES(class='form-control bg-secondary') }}
             <div id="SCNR_MTF_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Range: 0.5-1.0 - 0.5 = No change</div>
+        <div class="col-sm-8">Range: 0.5-1.0. 0.5 = No change</div>
     </div>
 
     <div class="form-group row">
@@ -1647,6 +1647,17 @@ var camera_id = {{ camera_id }};
               </ul>
             </div>
         </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.SCNR_MTF_MIDTONES_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.SCNR_MTF_MIDTONES_DAY(class='form-control bg-secondary') }}
+            <div id="SCNR_MTF_MIDTONES_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">Range: 0.5-1.0. 0.5 = No change</div>
     </div>
 
     <div class="form-group row">
@@ -8701,6 +8712,7 @@ const field_names = [
     'SCNR_ALGORITHM',
     'SCNR_ALGORITHM_DAY',
     'SCNR_MTF_MIDTONES',
+    'SCNR_MTF_MIDTONES_DAY',
     'CCD_TEMP',
     'CCD_TEMP_DAY',
     'TEMP_DISPLAY',
