--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1547,6 +1547,8 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">Range: 0.5-1.0. 0.5 = No change</div>
     </div>
 
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.WBR_FACTOR.label(class='col-form-label') }}
@@ -1580,6 +1582,45 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8"></div>
     </div>
 
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.WBR_MTF_MIDTONES.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.WBR_MTF_MIDTONES(class='form-control bg-secondary') }}
+            <div id="WBR_MTF_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Midtone Transfer Function stretch</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.WBG_MTF_MIDTONES.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.WBG_MTF_MIDTONES(class='form-control bg-secondary') }}
+            <div id="WBG_MTF_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>0.5 means no change.  Less than 0.5 increases the color, greater than 0.5 decreases the color</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.WBB_MTF_MIDTONES.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.WBB_MTF_MIDTONES(class='form-control bg-secondary') }}
+            <div id="WBB_MTF_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.AUTO_WB.label }}
@@ -1592,6 +1633,8 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">Auto WB is applied after manual WB settings</div>
     </div>
+
+    <hr>
 
     <div class="form-group row">
         <div class="col-sm-2">
@@ -1660,6 +1703,8 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">Range: 0.5-1.0. 0.5 = No change</div>
     </div>
 
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.WBR_FACTOR_DAY.label(class='col-form-label') }}
@@ -1693,6 +1738,47 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8"></div>
     </div>
 
+    <hr>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.WBR_MTF_MIDTONES_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.WBR_MTF_MIDTONES_DAY(class='form-control bg-secondary') }}
+            <div id="WBR_MTF_MIDTONES_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Midtone Transfer Function stretch</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.WBG_MTF_MIDTONES_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.WBG_MTF_MIDTONES_DAY(class='form-control bg-secondary') }}
+            <div id="WBG_MTF_MIDTONES_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>0.5 means no change.  Less than 0.5 increases the color, greater than 0.5 decreases the color</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.WBB_MTF_MIDTONES_DAY.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.WBB_MTF_MIDTONES_DAY(class='form-control bg-secondary') }}
+            <div id="WBB_MTF_MIDTONES_DAY-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8"></div>
+    </div>
+
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.AUTO_WB_DAY.label }}
@@ -1705,6 +1791,8 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">Auto WB is applied after manual WB settings</div>
     </div>
+
+    <hr>
 
     <div class="form-group row">
         <div class="col-sm-2">
@@ -8704,6 +8792,12 @@ const field_names = [
     'WBR_FACTOR_DAY',
     'WBG_FACTOR_DAY',
     'WBB_FACTOR_DAY',
+    'WBR_MTF_MIDTONES',
+    'WBG_MTF_MIDTONES',
+    'WBB_MTF_MIDTONES',
+    'WBR_MTF_MIDTONES_DAY',
+    'WBG_MTF_MIDTONES_DAY',
+    'WBB_MTF_MIDTONES_DAY',
     'SATURATION_FACTOR',
     'SATURATION_FACTOR_DAY',
     'GAMMA_CORRECTION',
@@ -9585,6 +9679,12 @@ $('#USE_NIGHT_COLOR').on('change', function() {
         $('#WBG_FACTOR_DAY').addClass('bg-dark text-secondary');
         $('#WBB_FACTOR_DAY').attr({'readonly': true, 'disabled': true});
         $('#WBB_FACTOR_DAY').addClass('bg-dark text-secondary');
+        $('#WBR_MTF_MIDTONES_DAY').attr({'readonly': true, 'disabled': true});
+        $('#WBR_MTF_MIDTONES_DAY').addClass('bg-dark text-secondary');
+        $('#WBG_MTF_MIDTONES_DAY').attr({'readonly': true, 'disabled': true});
+        $('#WBG_MTF_MIDTONES_DAY').addClass('bg-dark text-secondary');
+        $('#WBB_MTF_MIDTONES_DAY').attr({'readonly': true, 'disabled': true});
+        $('#WBB_MTF_MIDTONES_DAY').addClass('bg-dark text-secondary');
         $('#AUTO_WB_DAY').attr({'disabled': true});
         $('#SATURATION_FACTOR_DAY').attr({'readonly': true, 'disabled': true});
         $('#SATURATION_FACTOR_DAY').addClass('bg-dark text-secondary');
@@ -9601,6 +9701,12 @@ $('#USE_NIGHT_COLOR').on('change', function() {
         $('#WBG_FACTOR_DAY').removeClass('bg-dark text-secondary');
         $('#WBB_FACTOR_DAY').removeAttr('readonly disabled');
         $('#WBB_FACTOR_DAY').removeClass('bg-dark text-secondary');
+        $('#WBR_MTF_MIDTONES_DAY').removeAttr('readonly disabled');
+        $('#WBR_MTF_MIDTONES_DAY').removeClass('bg-dark text-secondary');
+        $('#WBG_MTF_MIDTONES_DAY').removeAttr('readonly disabled');
+        $('#WBG_MTF_MIDTONES_DAY').removeClass('bg-dark text-secondary');
+        $('#WBB_MTF_MIDTONES_DAY').removeAttr('readonly disabled');
+        $('#WBB_MTF_MIDTONES_DAY').removeClass('bg-dark text-secondary');
         $('#AUTO_WB_DAY').removeAttr('disabled');
         $('#SATURATION_FACTOR_DAY').removeAttr('readonly disabled');
         $('#SATURATION_FACTOR_DAY').removeClass('bg-dark text-secondary');
@@ -9896,6 +10002,12 @@ $( document ).ready(function() {
         $('#WBG_FACTOR_DAY').addClass('bg-dark text-secondary');
         $('#WBB_FACTOR_DAY').attr({'readonly': true, 'disabled': true});
         $('#WBB_FACTOR_DAY').addClass('bg-dark text-secondary');
+        $('#WBR_MTF_MIDTONES_DAY').attr({'readonly': true, 'disabled': true});
+        $('#WBR_MTF_MIDTONES_DAY').addClass('bg-dark text-secondary');
+        $('#WBG_MTF_MIDTONES_DAY').attr({'readonly': true, 'disabled': true});
+        $('#WBG_MTF_MIDTONES_DAY').addClass('bg-dark text-secondary');
+        $('#WBB_MTF_MIDTONES_DAY').attr({'readonly': true, 'disabled': true});
+        $('#WBB_MTF_MIDTONES_DAY').addClass('bg-dark text-secondary');
         $('#AUTO_WB_DAY').attr({'disabled': true});
         $('#SATURATION_FACTOR_DAY').attr({'readonly': true, 'disabled': true});
         $('#SATURATION_FACTOR_DAY').addClass('bg-dark text-secondary');
