--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1504,8 +1504,7 @@ var camera_id = {{ camera_id }};
             <div id="IMAGE_STRETCH__MODE3_MIDTONES-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-8">
-            <div>Values less than 0.5 enhances midtones, greater than 0.5 darkens midtones (0.5 results in the original image)</div>
-            <div>0.25 - 0.35 are good values to start</div>
+            <div>0.25 - 0.35 are good values to start. Lower may be ideal if the FOV fills a small proportion of the sensor area.</div>
         </div>
     </div>
 
