add custom chart minimum values

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4924,6 +4924,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_1_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_1_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_1_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.CHARTS__CUSTOM_SLOT_2.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -4932,6 +4945,19 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-6">
             <div><span class="badge rounded-pill bg-info text-dark">Note</span> Changing these settings will require a restart/reload</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_2_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_2_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_2_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
         </div>
     </div>
 
@@ -4949,6 +4975,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_3_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_3_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_3_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.CHARTS__CUSTOM_SLOT_4.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -4956,6 +4995,19 @@ var camera_id = {{ camera_id }};
             <div id="CHARTS__CUSTOM_SLOT_4-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_4_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_4_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_4_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
         </div>
     </div>
 
@@ -4973,6 +5025,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_5_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_5_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_5_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.CHARTS__CUSTOM_SLOT_6.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -4980,6 +5045,19 @@ var camera_id = {{ camera_id }};
             <div id="CHARTS__CUSTOM_SLOT_6-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_6_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_6_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_6_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
         </div>
     </div>
 
@@ -4997,6 +5075,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_7_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_7_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_7_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.CHARTS__CUSTOM_SLOT_8.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -5009,6 +5100,19 @@ var camera_id = {{ camera_id }};
 
     <div class="form-group row">
         <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_8_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_8_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_8_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
             {{ form_config.CHARTS__CUSTOM_SLOT_9.label(class='col-form-label') }}
         </div>
         <div class="col-sm-4">
@@ -5016,6 +5120,19 @@ var camera_id = {{ camera_id }};
             <div id="CHARTS__CUSTOM_SLOT_9-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
         <div class="col-sm-6">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_9_MIN.label(class='col-form-label') }}
+        </div>
+        <div class="col-sm-2">
+            {{ form_config.CHARTS__CUSTOM_SLOT_9_MIN(class='form-control bg-secondary') }}
+            <div id="CHARTS__CUSTOM_SLOT_9_MIN-error" class="invalid-feedback text-danger" style="display: none;"></div>
+        </div>
+        <div class="col-sm-8">
+            <div>Chart minimum value</div>
         </div>
     </div>
 
@@ -9076,14 +9193,23 @@ const field_names = [
     'WEB_STATUS_TEMPLATE',
     'WEB_EXTRA_TEXT',
     'CHARTS__CUSTOM_SLOT_1',
+    'CHARTS__CUSTOM_SLOT_1_MIN',
     'CHARTS__CUSTOM_SLOT_2',
+    'CHARTS__CUSTOM_SLOT_2_MIN',
     'CHARTS__CUSTOM_SLOT_3',
+    'CHARTS__CUSTOM_SLOT_3_MIN',
     'CHARTS__CUSTOM_SLOT_4',
+    'CHARTS__CUSTOM_SLOT_4_MIN',
     'CHARTS__CUSTOM_SLOT_5',
+    'CHARTS__CUSTOM_SLOT_5_MIN',
     'CHARTS__CUSTOM_SLOT_6',
+    'CHARTS__CUSTOM_SLOT_6_MIN',
     'CHARTS__CUSTOM_SLOT_7',
+    'CHARTS__CUSTOM_SLOT_7_MIN',
     'CHARTS__CUSTOM_SLOT_8',
+    'CHARTS__CUSTOM_SLOT_8_MIN',
     'CHARTS__CUSTOM_SLOT_9',
+    'CHARTS__CUSTOM_SLOT_9_MIN',
     'CLAHE_CLIPLIMIT',
     'CLAHE_GRIDSIZE',
     'IMAGE_STRETCH__CLASSNAME',
