add chart suggested minimum values

--- a/indi_allsky/flask/templates/chart.html
+++ b/indi_allsky/flask/templates/chart.html
@@ -385,7 +385,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_1 | float }},
                 },
             }
         }
@@ -430,7 +430,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_2 | float }},
                 },
             }
         }
@@ -475,7 +475,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_3 | float }},
                 },
             }
         }
@@ -520,7 +520,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_4 | float }},
                 },
             }
         }
@@ -565,7 +565,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_5 | float }},
                 },
             }
         }
@@ -610,7 +610,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_6 | float }},
                 },
             }
         }
@@ -655,7 +655,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_7 | float }},
                 },
             }
         }
@@ -700,7 +700,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_8 | float }},
                 },
             }
         }
@@ -745,7 +745,7 @@ function init() {
                         color: 'rgba(75, 75, 75, 1)',
                         stacked: false,
                     },
-                    suggestedMin: 0,
+                    suggestedMin: {{ min_custom_chart_9 | float }},
                 },
             }
         }
